added list of content page

--- a/index.html
+++ b/index.html
@@ -25,24 +25,31 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link anchor" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" href="#aboutMe">About Me </a>
+                    <a class="nav-link anchor" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                        href="#aboutMe">About Me </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link anchor" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" href="#grades">Acedemics </a>
+                    <a class="nav-link anchor" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                        href="#grades">Acedemics </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link anchor" data-toggle="collapse"  data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" href="#skills">Skills </a>
+                    <a class="nav-link anchor" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                        href="#skills">Skills </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link anchor" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" href="#projects">Projects </a>
+                    <a class="nav-link anchor" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                        href="#projects">Projects </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link anchor" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" href="#experience">Experience </a>
+                    <a class="nav-link anchor" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                        href="#experience">Experience </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link anchor" data-toggle="modal" data-target="#contactModal">Contact </a>
+                    <a class="nav-link anchor" href="#" data-toggle="modal" data-target="#contactModal">Contact </a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="BenContent.html">Project content </a>
+                </li>
             </ul>
 
         </div>
@@ -197,7 +204,7 @@
                     </thead>
                     <tbody>
                         <tr id="popover" title="Module description" data-content="	This module provides the student with the knowledge and skills to analyse, design, develop, test and debug applications using data structures and algorithms.">
-                            <td>Algorithms and Data Structors</td>
+                            <td>Algorithms and Data Structures</td>
                             <td>A</td>
                             <td>
                                 <div class="progress">
@@ -232,7 +239,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>Innovation & Entrepreneurshp</td>
+                            <td>Innovation & Entrepreneurship</td>
                             <td>B</td>
                             <td>
                                 <div class="progress">
@@ -256,11 +263,21 @@
                             <td>Pass</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
                                         style="width:0%;">0% </div>
                                 </div>
                             </td>
                         </tr>
+                        <tr>
+                                <td>3rd Year Project</td>
+                                <td>B</td>
+                                <td>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"
+                                            style="width:65%;">65% </div>
+                                    </div>
+                                </td>
+                            </tr>
                     </tbody>
                 </table>
             </div>
@@ -662,7 +679,7 @@
         <br>
         <br>
         <br>
-        <h2 >Projects</h2>
+        <h2>Projects</h2>
         <div id="accordion" role="tablist">
             <div class="card">
                 <div class="card-header" role="tab" id="headingOne">
@@ -675,7 +692,8 @@
 
                 <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
-                        <h6>Description:</h6>Option pricer for stocks in the S&P 500 list. Prices calculated using Black Sholes algorithm and simulated using the Monte Carlo simulation method.
+                        <h6>Description:</h6>Option pricer for stocks in the S&P 500 list. Prices calculated using Black Sholes
+                        algorithm and simulated using the Monte Carlo simulation method.
                         <h6>Technologies & Tools Used:</h6>
                         Python, Cuda, Hadoop, Azure
                     </div>
@@ -741,9 +759,9 @@
     <div class="paralax-4">
     </div>
     <div id="experience" class="paddingDiv">
-            <br>
-            <br>
-            <br>
+        <br>
+        <br>
+        <br>
         <h2>Experience</h2>
         <ul class="list-group">
             <li class="list-group-item">
@@ -808,7 +826,7 @@
                     <form>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Email address</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" autocorrect="off" autocapitalize="off" spellcheck="false" autocomplete="off" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Subject</label>
