--- a/BenContent.html
+++ b/BenContent.html
@@ -6,15 +6,16 @@
 </head>
 
 <body>
-    <a href="http://www.grahamlalor.com">Link to hosted page</a><br>
+    <a href="http://www.grahamlalor.com">Link to hosted page</a>
+    <br>
     <a href="index.html">Back to Portfolio</a>
     <h4>Bootstrap components</h4>
     <ul>
         <li>Nav bar - top page nav bar</li>
         <li>Scrolling Paralax</li>
         <li>Modal - contact form</li>
-        <li>Forum - contact form (added validation but button click calls jquery before validation) </li>
-        <li>Bootstrap allert - success mesage contact form</li>
+        <li>Forum - contact form</li>
+        <li>Bootstrap allert - success mesage contact form was implemented but was commented out for form validation</li>
         <li>Tabs pill - Acedemics</li>
         <li>Tooltip - module description in acedemics first three each year</li>
         <li>Cards - skills </li>
@@ -27,10 +28,40 @@
     <br>
     <h4>Lecture content</h4>
     <ul>
-        <li>Mobile friendly - removed paralax feature on mobile as it may distract and function in correctly on smaller devices</li>
-        <li>Limit nav bar links - implemented other than the ca upload as needed to link part two of CA</li>
-        <li>Input filters - email input on contact has no autocorrect, spellcheck, autocapitilize or autocomplete as gives full control to user (especially on mobile devices)</li>
+        <li>
+            Mobile friendly
+            <ul>
+                <li>Mobile friendly - removed paralax feature on mobile as it may distract and function in correctly on smaller
+                    devices
+                </li>
+                <li>Input filters - email input on contact has no autocorrect, spellcheck, autocapitilize or autocomplete as
+                    gives full control to user (especially on mobile devices)</li>
+            </ul>
+        </li>
+        <li>Law of Focal point - software development orientated modules progress bar highlighted in green to stand out</li>
+        <li>Usablility Rules and Principles
+            <ul>
+                <li>7±2 Principle - No more than nine links in nav bar (tried to keep to seven but like to CA part two added a link)</li>
+                <li>3 click rule - can navigate throughout my page within 3 clicks</li>
+                <li>Fitts law - show more button is directly beside Skills titile incase users want to see them all meaning its not too far away</li>
+                <li>Simple page title</li>
+                <li>Content is easy to scan</li>
+                <li>Contact form to get in touch</li>
+                <li>Search bar included for CA to show proper design principles</li>
+            </ul>
+        </li>
     </ul>
+    <h3>Mobile load times</h3>
+    Nexus 6 AT&T <br>
+    <img src="androidTestATT.PNG">
+    <br>
+    Nexus 6 WIFI
+    <br>
+    <img src="androidTestWIFI.PNG">
+    <br>
+    iPhone 6 plus WIFI
+    <br>
+    <img src="iosTestWIFI.PNG">
 </body>
 
 </html>
