--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Graham Lalor portfolio</title>
+    <title>Graham Lalor</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
         crossorigin="anonymous">
@@ -62,11 +62,11 @@
         </form>
     </nav>
     <!-- For contact us -->
-    <div id="light" class="white_content">
+    <!-- <div id="light" class="white_content">
         <div id="successAlert" class="alert alert-success alert-dismissible fade show" role="alert">
             <strong>Success!</strong> The email has been sent.
         </div>
-    </div>
+    </div> -->
     <div id="fade" class="black_overlay"></div>
     <div class="home jumbotron jumbotron-fluid">
         <div id="home-info" class="center">
@@ -144,7 +144,7 @@
                             <td>NA</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
                                         style="width:0%">0% </div>
                                 </div>
                             </td>
@@ -203,13 +203,23 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr id="popover" title="Module description" data-content="	This module provides the student with the knowledge and skills to analyse, design, develop, test and debug applications using data structures and algorithms.">
+                        <tr id="popover" title="Module description" data-content="This module provides the student with the knowledge and skills to analyse, design, develop, test and debug applications using data structures and algorithms.">
                             <td>Algorithms and Data Structures</td>
                             <td>A</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"
                                         style="width:88%;">88%</div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr id="popover" title="Module description" data-content="A small cross platform uility application used as a todo list and BMI calculator.">
+                            <td>3rd Year Project</td>
+                            <td>B</td>
+                            <td>
+                                <div class="progress">
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"
+                                        style="width:65%;">65% </div>
                                 </div>
                             </td>
                         </tr>
@@ -223,17 +233,17 @@
                             <td>B+</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100"
                                         style="width:77%;">77% </div>
                                 </div>
                             </td>
                         </tr>
-                        <tr id="popover" title="Module description" data-content="This subject aims to provide an introduction to the design and internal operation of general purpose multi-tasking operating systems. It concentrates on the kernel aspects of such systems with the emphasis being fundamental kernel-level design and performance constraints and criteria. Where applicable, the course makes reference to practical operating systems (typically, Unix) to illustrate real implementations and to give the learner practical experience.">
+                        <tr>
                             <td>Operating Systems</td>
                             <td>B+</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"
                                         style="width:72%;">72% </div>
                                 </div>
                             </td>
@@ -243,7 +253,7 @@
                             <td>B</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"
                                         style="width:68%;">68% </div>
                                 </div>
                             </td>
@@ -253,7 +263,7 @@
                             <td>B</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="63" aria-valuemin="0" aria-valuemax="100"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="63" aria-valuemin="0" aria-valuemax="100"
                                         style="width:63%;">63% </div>
                                 </div>
                             </td>
@@ -263,21 +273,12 @@
                             <td>Pass</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
                                         style="width:0%;">0% </div>
                                 </div>
                             </td>
                         </tr>
-                        <tr>
-                                <td>3rd Year Project</td>
-                                <td>B</td>
-                                <td>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"
-                                            style="width:65%;">65% </div>
-                                    </div>
-                                </td>
-                            </tr>
+                        
                     </tbody>
                 </table>
             </div>
@@ -297,7 +298,7 @@
                             <td>B+</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="70"
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="70"
                                         style="width:70%;">70% </div>
                                 </div>
                             </td>
@@ -307,7 +308,7 @@
                             <td>A</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="82"
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="82"
                                         style="width:82%;">82% </div>
                                 </div>
                             </td>
@@ -357,7 +358,7 @@
                             <td>A</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="85"
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="85"
                                         style="width:85%;">85% </div>
                                 </div>
                             </td>
@@ -367,7 +368,7 @@
                             <td>A</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="83"
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="83"
                                         style="width:83%;">83% </div>
                                 </div>
                             </td>
@@ -431,7 +432,7 @@
                             <td>A</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80"
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80"
                                         style="width:80%;">80% </div>
                                 </div>
                             </td>
@@ -491,7 +492,7 @@
                             <td>A</td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80"
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80"
                                         style="width:80%;">80% </div>
                                 </div>
                             </td>
@@ -563,25 +564,25 @@
         <br>
         <div class="card-deck">
             <div class="card  col-sm-3">
-                <img class="card-img-top" src="java.jpg" alt="Card image cap">
+                <img class="card-img-top" src="java.jpg" alt="Java logo image">
                 <div class="card-body">
                     <h4 class="card-title">Java</h4>
                 </div>
             </div>
             <div class="card col-sm-3">
-                <img class="card-img-top" src="python.png" alt="Card image cap">
+                <img class="card-img-top" src="python.png" alt="Python logo image">
                 <div class="card-body">
                     <h4 class="card-title">Python</h4>
                 </div>
             </div>
             <div class="card col-sm-3">
-                <img class="card-img-top" src="c.jpg" alt="Card image cap">
+                <img class="card-img-top" src="c.jpg" alt="C logo image">
                 <div class="card-body">
                     <h4 class="card-title">C#</h4>
                 </div>
             </div>
             <div class="card col-sm-3">
-                <img class="card-img-top" src="cplusplus.png" alt="Card image cap">
+                <img class="card-img-top" src="cplusplus.png" alt="C plus plus logo image">
                 <div class="card-body">
                     <h4 class="card-title">C++</h4>
                 </div>
@@ -591,25 +592,25 @@
         <div class="moreSkills">
             <div class="card-deck">
                 <div class="card col-sm-3">
-                    <img class="card-img-top" src="github.png" alt="Card image cap">
+                    <img class="card-img-top" src="github.png" alt="Git hub logo image">
                     <div class="card-body">
                         <h4 class="card-title">GitHub</h4>
                     </div>
                 </div>
                 <div class="card col-sm-3">
-                    <img class="card-img-top" src="ionic.png" alt="Card image cap">
+                    <img class="card-img-top" src="ionic.png" alt="Ionic logo image">
                     <div class="card-body">
                         <h4 class="card-title">Ionic</h4>
                     </div>
                 </div>
                 <div class="card col-sm-3">
-                    <img class="card-img-top" src="javascript.png" alt="Card image cap">
+                    <img class="card-img-top" src="javascript.png" alt="JavaScript logo image">
                     <div class="card-body">
                         <h4 class="card-title">JavaScript</h4>
                     </div>
                 </div>
                 <div class="card col-sm-3">
-                    <img class="card-img-top" src="sql.png" alt="Card image cap">
+                    <img class="card-img-top" src="sql.png" alt="SQL logo image">
                     <div class="card-body">
                         <h4 class="card-title">SQL</h4>
                     </div>
@@ -618,25 +619,25 @@
             <br>
             <div class="card-deck">
                 <div class="card col-sm-3">
-                    <img class="card-img-top" src="mongo.png" alt="Card image cap">
+                    <img class="card-img-top" src="mongo.png" alt="Mongo Database logo image">
                     <div class="card-body">
                         <h4 class="card-title">Mongo DB</h4>
                     </div>
                 </div>
                 <div class="card col-sm-3">
-                    <img class="card-img-top" src="html.png" alt="Card image cap">
+                    <img class="card-img-top" src="html.png" alt="HTML logo image">
                     <div class="card-body">
                         <h4 class="card-title">HTML</h4>
                     </div>
                 </div>
                 <div class="card col-sm-3">
-                    <img class="card-img-top" src="bootstrap.png" alt="Card image cap">
+                    <img class="card-img-top" src="bootstrap.png" alt="Bootstrap logo imagep">
                     <div class="card-body">
                         <h4 class="card-title">Bootstrap</h4>
                     </div>
                 </div>
                 <div class="card col-sm-3">
-                    <img class="card-img-top" src="linux.png" alt="Card image cap">
+                    <img class="card-img-top" src="linux.png" alt="Linux logo image">
                     <div class="card-body">
                         <h4 class="card-title">Linux</h4>
                     </div>
@@ -645,7 +646,7 @@
             <br>
             <div class="card-deck">
                 <div class="card col-sm-3">
-                    <img class="card-img-top" src="windows.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="windows.jpg" alt="Windows logo image">
                     <div class="card-body">
                         <h4 class="card-title">Windows</h4>
                     </div>
@@ -836,11 +837,12 @@
                             <label for="message">Message</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Please type your message here..." required></textarea>
                         </div>
-                    </form>
+                    
                 </div>
                 <div class="modal-footer">
-                    <button id="sendEmail" type="button" class="btn btn-success" href="javascript:void(0)" onclick="document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block'">Submit</button>
+                    <button id="sendEmail" type="submit" class="btn btn-success" >Submit</button>
                 </div>
+                </form>
             </div>
         </div>
     </div>
