--- a/index.html
+++ b/index.html
@@ -842,6 +842,29 @@
         <br>
         <h2>Experience</h2>
         <ul class="list-group">
+                <li class="list-group-item">
+                        <img class="col-sm-3" src="Workday_logo.jpg">
+                        <div class="float-right col-sm-9">
+                            <p class="float-left">
+                                <h5>Employer:</h5> Wrokday
+                                <br>
+                                <h5>Job Title:</h5> Application Development
+                                <br>
+                                <h5>Date:</h5> September 2018 – Present
+                                <br>
+                                <!--<h5>Duties:</h5>
+                                <ul>
+                                    <li>Talk to customers to see if any of the items are on sale are for them or if they fix a
+                                        problem
+                                        they are having.</li>
+                                    <li>Interacting with customers and insure that are taken care of while in the store.</li>
+                                    <li>Deal with any customer problems at the help desk . Developed a co configure
+                                        tutorilication to
+                                        download and process the information required</li>
+                                </ul>-->
+                            </p>
+                        </div>
+                    </li>
             <li class="list-group-item">
                 <img class="col-sm-3" src="Fidelity+Investments.png">
                 <div class="float-right col-sm-9">
